[Refactor] Simplify Vulkan SDK installation by using setup action instead of manual script

--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -19,205 +19,12 @@ jobs:
       with:
         msbuild-architecture: x64
 
-    - name: Manual Vulkan SDK Installation with Full Logging
-      shell: powershell
-      run: |
-        $VulkanVersion = "1.3.283.0"
-        $VulkanUrl = "https://sdk.lunarg.com/sdk/download/$VulkanVersion/windows/VulkanSDK-$VulkanVersion-Installer.exe"
-        $InstallerPath = "$env:TEMP\VulkanSDK-Installer.exe"
-        
-        Write-Host "=== Starting Vulkan SDK Installation Process ==="
-        Write-Host "Version: $VulkanVersion"
-        Write-Host "URL: $VulkanUrl"
-        Write-Host "Installer Path: $InstallerPath"
-        Write-Host ""
-        
-        # Check initial system state
-        Write-Host "=== Pre-installation System Check ==="
-        Write-Host "Current user: $env:USERNAME"
-        Write-Host "Available disk space on C:"
-        Get-WmiObject -Class Win32_LogicalDisk -Filter "DeviceID='C:'" | Select-Object Size,FreeSpace
-        Write-Host ""
-        
-        # Download with detailed progress
-        Write-Host "=== Downloading Vulkan SDK ==="
-        try {
-          $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -Uri $VulkanUrl -OutFile $InstallerPath -TimeoutSec 300 -Verbose
-          Write-Host "Download completed successfully"
-          
-          $fileInfo = Get-Item $InstallerPath
-          Write-Host "Downloaded file size: $($fileInfo.Length) bytes"
-          Write-Host "Downloaded file path: $($fileInfo.FullName)"
-        } catch {
-          Write-Error "Download failed: $_"
-          exit 1
-        }
-        Write-Host ""
-        
-        # Try different installation approaches with timeouts
-        Write-Host "=== Installation Attempt 1: Standard Silent Install ==="
-        try {
-          Write-Host "Running: $InstallerPath /S (with 10-minute timeout)"
-          $process1 = Start-Process -FilePath $InstallerPath -ArgumentList "/S" -PassThru -NoNewWindow
-          
-          # Wait with timeout (10 minutes = 600 seconds)
-          $timeout = 600
-          if ($process1.WaitForExit($timeout * 1000)) {
-            Write-Host "Process completed. Exit code: $($process1.ExitCode)"
-            $installSuccess = ($process1.ExitCode -eq 0)
-          } else {
-            Write-Host "Process timed out after $timeout seconds, killing process"
-            $process1.Kill()
-            $installSuccess = $false
-          }
-          
-          if (-not $installSuccess) {
-            Write-Host "Standard silent install failed, trying alternative approaches..."
-            
-            Write-Host "=== Installation Attempt 2: InstallShield Silent Install ==="
-            $process2 = Start-Process -FilePath $InstallerPath -ArgumentList "/s", "/v/qn" -PassThru -NoNewWindow
-            if ($process2.WaitForExit($timeout * 1000)) {
-              Write-Host "InstallShield install exit code: $($process2.ExitCode)"
-              $installSuccess = ($process2.ExitCode -eq 0)
-            } else {
-              Write-Host "InstallShield install timed out"
-              $process2.Kill()
-            }
-            
-            if (-not $installSuccess) {
-              Write-Host "=== Installation Attempt 3: MSI Extract and Install ==="
-              # Try to extract and run as MSI if it's wrapped
-              $extractDir = "$env:TEMP\VulkanExtract"
-              New-Item -ItemType Directory -Path $extractDir -Force | Out-Null
-              
-              try {
-                # Try to extract the installer
-                Write-Host "Attempting to extract installer to $extractDir"
-                $extractProcess = Start-Process -FilePath $InstallerPath -ArgumentList "/extract:$extractDir" -PassThru -NoNewWindow
-                if ($extractProcess.WaitForExit(300 * 1000)) {  # 5 minute timeout for extraction
-                  Write-Host "Extraction completed with exit code: $($extractProcess.ExitCode)"
-                  
-                  # Look for MSI files in extracted content
-                  $msiFiles = Get-ChildItem $extractDir -Recurse -Filter "*.msi" -ErrorAction SilentlyContinue
-                  if ($msiFiles.Count -gt 0) {
-                    Write-Host "Found MSI files: $($msiFiles.Count)"
-                    foreach ($msi in $msiFiles) {
-                      Write-Host "  - $($msi.FullName)"
-                    }
-                    
-                    # Install the main MSI
-                    $mainMsi = $msiFiles[0]
-                    Write-Host "Installing MSI: $($mainMsi.FullName)"
-                    $msiProcess = Start-Process -FilePath "msiexec.exe" -ArgumentList "/i", "`"$($mainMsi.FullName)`"", "/quiet", "/norestart" -PassThru -NoNewWindow
-                    if ($msiProcess.WaitForExit($timeout * 1000)) {
-                      Write-Host "MSI install exit code: $($msiProcess.ExitCode)"
-                      $installSuccess = ($msiProcess.ExitCode -eq 0)
-                    } else {
-                      Write-Host "MSI install timed out"
-                      $msiProcess.Kill()
-                    }
-                  } else {
-                    Write-Host "No MSI files found in extracted content"
-                  }
-                } else {
-                  Write-Host "Extraction timed out"
-                  $extractProcess.Kill()
-                }
-              } catch {
-                Write-Host "Extraction attempt failed: $_"
-              }
-            }
-          }
-        } catch {
-          Write-Error "Installation process failed: $_"
-        }
-        Write-Host ""
-        
-        # Check common Vulkan SDK locations
-        Write-Host "=== Post-installation System Scan ==="
-        $CommonPaths = @(
-          "C:\VulkanSDK\$VulkanVersion",
-          "C:\VulkanSDK",
-          "${env:ProgramFiles}\VulkanSDK\$VulkanVersion",
-          "${env:ProgramFiles}\VulkanSDK",
-          "${env:ProgramFiles(x86)}\VulkanSDK\$VulkanVersion",
-          "${env:ProgramFiles(x86)}\VulkanSDK"
-        )
-        
-        $FoundPath = $null
-        foreach ($path in $CommonPaths) {
-          Write-Host "Checking: $path"
-          if (Test-Path $path) {
-            Write-Host "  - Directory exists"
-            $contents = Get-ChildItem $path -ErrorAction SilentlyContinue
-            Write-Host "  - Contains $($contents.Count) items"
-            
-            $glslcPath = Join-Path $path "Bin\glslc.exe"
-            if (Test-Path $glslcPath) {
-              Write-Host "  - Found glslc.exe at $glslcPath"
-              $FoundPath = $path
-              break
-            } else {
-              Write-Host "  - glslc.exe not found in Bin subdirectory"
-              Write-Host "  - Directory contents:"
-              $exeFiles = Get-ChildItem $path -Recurse -Filter "*.exe" -ErrorAction SilentlyContinue
-              foreach ($exe in $exeFiles) {
-                Write-Host "    $($exe.FullName)"
-              }
-            }
-          } else {
-            Write-Host "  - Directory does not exist"
-          }
-        }
-        
-        # Comprehensive search if not found
-        if (-not $FoundPath) {
-          Write-Host "=== Comprehensive Search for Vulkan SDK ==="
-          Write-Host "Searching entire C: drive for VulkanSDK directories..."
-          
-          try {
-            $vulkanDirs = Get-ChildItem -Path "C:\" -Directory -Recurse -Filter "*Vulkan*" -ErrorAction SilentlyContinue
-            foreach ($dir in $vulkanDirs) {
-              Write-Host "Found Vulkan-related directory: $($dir.FullName)"
-              
-              $glslcFiles = Get-ChildItem $dir.FullName -Recurse -Filter "glslc.exe" -ErrorAction SilentlyContinue
-              foreach ($glslc in $glslcFiles) {
-                Write-Host "  - Found glslc.exe at: $($glslc.FullName)"
-                $FoundPath = $glslc.Directory.Parent.FullName
-              }
-            }
-          } catch {
-            Write-Host "Comprehensive search failed: $_"
-          }
-        }
-        
-        # Final verification and environment setup
-        if ($FoundPath) {
-          Write-Host "=== SUCCESS: Vulkan SDK Found ==="
-          Write-Host "Vulkan SDK Path: $FoundPath"
-          
-          echo "VULKAN_SDK=$FoundPath" >> $env:GITHUB_ENV
-          echo "$FoundPath\Bin" >> $env:GITHUB_PATH
-          
-          $glslcExe = Join-Path $FoundPath "Bin\glslc.exe"
-          Write-Host "Testing glslc:"
-          & $glslcExe --version
-          
-          Write-Host "=== Vulkan SDK Installation Complete ==="
-        } else {
-          Write-Host "=== FAILURE: Vulkan SDK Not Found ==="
-          Write-Host "The installation may have failed or installed to an unexpected location."
-          Write-Host ""
-          Write-Host "Final system state:"
-          Write-Host "Temp directory contents:"
-          $tempFiles = Get-ChildItem $env:TEMP -Filter "*Vulkan*" -ErrorAction SilentlyContinue
-          foreach ($file in $tempFiles) {
-            Write-Host "  $($file.FullName)"
-          }
-          
-          exit 1
-        }
+    - name: Install Vulkan SDK
+      uses: humbletim/setup-vulkan-sdk@v1.2.0
+      with:
+        vulkan-query-version: 1.3.283.0
+        vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, Vulkan-Utility-Libraries, VulkanMemoryAllocator, Vulkan-ExtensionLayer, Vulkan-ValidationLayers, SPIRV-Headers, SPIRV-Tools-opt, glslang, shaderc
+        vulkan-use-cache: false
 
     - name: Create build directory and run CMake
       run: |
@@ -249,27 +56,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Vulkan SDK
-      run: |
-        $VulkanVersion = "1.3.283.0"
-        $VulkanUrl = "https://sdk.lunarg.com/sdk/download/$VulkanVersion/windows/VulkanSDK-$VulkanVersion-Installer.exe"
-        $InstallerPath = "$env:TEMP\VulkanSDK-Installer.exe"
-        
-        Write-Host "Downloading Vulkan SDK..."
-        Invoke-WebRequest -Uri $VulkanUrl -OutFile $InstallerPath -TimeoutSec 300
-        
-        Write-Host "Installing Vulkan SDK silently..."
-        $process = Start-Process -FilePath $InstallerPath -ArgumentList @("/S") -PassThru -NoNewWindow
-        $timeout = 600  # 10 minutes timeout
-        if (-not $process.WaitForExit($timeout * 1000)) {
-          $process.Kill()
-          Write-Error "Vulkan SDK installation timed out"
-          exit 1
-        }
-        
-        # Set environment variables
-        $VulkanPath = "C:\VulkanSDK\$VulkanVersion"
-        echo "$VulkanPath\Bin" >> $env:GITHUB_PATH
-      shell: powershell
+      uses: humbletim/setup-vulkan-sdk@v1.2.0
+      with:
+        vulkan-query-version: 1.3.283.0
+        vulkan-use-cache: false
 
     - name: Download build artifacts
       uses: actions/download-artifact@v4
