[Feature] Implement screenshot regression testing framework with FLIP, add default viewport test

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ assets/*
 .vs/
 .vscode/
 .idea/
+
+# Python environments
+venv_screenshot_test/
+venv/
+env/
+.env/
+*.pyc
+__pycache__/
+.pytest_cache/
