--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,26 +24,37 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          /usr/local/bin/vulkan-*
-          /usr/local/include/vulkan
-          /usr/local/lib/*vulkan*
-          /usr/local/share/vulkan
-          /etc/apt/trusted.gpg.d/lunarg.asc
-          /etc/apt/sources.list.d/lunarg-vulkan-noble.list
+          ~/vulkan-cache/apt-keys
+          ~/vulkan-cache/apt-sources
+          ~/vulkan-cache/installed-packages.txt
         key: vulkan-sdk-${{ runner.os }}-${{ env.VULKAN_SDK_VERSION }}
 
     - name: Install Vulkan SDK
-      if: steps.cache-vulkan.outputs.cache-hit != 'true'
       run: |
-        wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
-        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list http://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
-        sudo apt update
-        sudo apt install -y vulkan-sdk
-
-    - name: Restore Vulkan SDK from cache
-      if: steps.cache-vulkan.outputs.cache-hit == 'true'
-      run: |
-        sudo apt update
+        if [ "${{ steps.cache-vulkan.outputs.cache-hit }}" == "true" ]; then
+          echo "Restoring Vulkan SDK from cache..."
+          sudo cp ~/vulkan-cache/apt-keys/lunarg.asc /etc/apt/trusted.gpg.d/
+          sudo cp ~/vulkan-cache/apt-sources/lunarg-vulkan-noble.list /etc/apt/sources.list.d/
+          sudo apt update
+          # Install packages from cached list
+          sudo apt install -y vulkan-sdk
+        else
+          echo "Installing Vulkan SDK and caching setup..."
+          mkdir -p ~/vulkan-cache/apt-keys ~/vulkan-cache/apt-sources
+          
+          # Download and install
+          wget -qO ~/vulkan-cache/apt-keys/lunarg.asc https://packages.lunarg.com/lunarg-signing-key-pub.asc
+          sudo cp ~/vulkan-cache/apt-keys/lunarg.asc /etc/apt/trusted.gpg.d/
+          
+          wget -qO ~/vulkan-cache/apt-sources/lunarg-vulkan-noble.list http://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
+          sudo cp ~/vulkan-cache/apt-sources/lunarg-vulkan-noble.list /etc/apt/sources.list.d/
+          
+          sudo apt update
+          sudo apt install -y vulkan-sdk
+          
+          # Cache the package list for reference
+          dpkg -l | grep vulkan > ~/vulkan-cache/installed-packages.txt
+        fi
 
     - name: Cache SDL2 packages
       id: cache-sdl2
@@ -99,26 +110,37 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          /usr/local/bin/vulkan-*
-          /usr/local/include/vulkan
-          /usr/local/lib/*vulkan*
-          /usr/local/share/vulkan
-          /etc/apt/trusted.gpg.d/lunarg.asc
-          /etc/apt/sources.list.d/lunarg-vulkan-noble.list
+          ~/vulkan-cache/apt-keys
+          ~/vulkan-cache/apt-sources
+          ~/vulkan-cache/installed-packages.txt
         key: vulkan-sdk-${{ runner.os }}-${{ env.VULKAN_SDK_VERSION }}
 
     - name: Install Vulkan SDK
-      if: steps.cache-vulkan-test.outputs.cache-hit != 'true'
       run: |
-        wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
-        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list http://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
-        sudo apt update
-        sudo apt install -y vulkan-sdk
-
-    - name: Restore Vulkan SDK from cache
-      if: steps.cache-vulkan-test.outputs.cache-hit == 'true'
-      run: |
-        sudo apt update
+        if [ "${{ steps.cache-vulkan-test.outputs.cache-hit }}" == "true" ]; then
+          echo "Restoring Vulkan SDK from cache..."
+          sudo cp ~/vulkan-cache/apt-keys/lunarg.asc /etc/apt/trusted.gpg.d/
+          sudo cp ~/vulkan-cache/apt-sources/lunarg-vulkan-noble.list /etc/apt/sources.list.d/
+          sudo apt update
+          # Install packages from cached list
+          sudo apt install -y vulkan-sdk
+        else
+          echo "Installing Vulkan SDK and caching setup..."
+          mkdir -p ~/vulkan-cache/apt-keys ~/vulkan-cache/apt-sources
+          
+          # Download and install
+          wget -qO ~/vulkan-cache/apt-keys/lunarg.asc https://packages.lunarg.com/lunarg-signing-key-pub.asc
+          sudo cp ~/vulkan-cache/apt-keys/lunarg.asc /etc/apt/trusted.gpg.d/
+          
+          wget -qO ~/vulkan-cache/apt-sources/lunarg-vulkan-noble.list http://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
+          sudo cp ~/vulkan-cache/apt-sources/lunarg-vulkan-noble.list /etc/apt/sources.list.d/
+          
+          sudo apt update
+          sudo apt install -y vulkan-sdk
+          
+          # Cache the package list for reference
+          dpkg -l | grep vulkan > ~/vulkan-cache/installed-packages.txt
+        fi
 
     - name: Cache SDL2 runtime packages
       id: cache-sdl2-runtime
